--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,19 @@
 			</plugins>
 		</pluginManagement>
 		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.14.1</version>
+				<configuration>
+					<useFile>false</useFile>
+					<additionalClasspathElements>
+						<additionalClasspathElement>${MULE_HOME}/conf</additionalClasspathElement>
+						<!-- Location of the mule licence in Bamboo muleLicenseKey.lic -->
+						<additionalClasspathElement>/home/j2ee-bamboo/license</additionalClasspathElement>
+					</additionalClasspathElements>
+				</configuration>
+			</plugin>
 			<!-- Integration Tests -->
 			<plugin>
 				<artifactId>maven-failsafe-plugin</artifactId>
