--- a/pom.xml
+++ b/pom.xml
@@ -442,6 +442,12 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>xerces</groupId>
+			<artifactId>xercesImpl</artifactId>
+			<version>2.9.1</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>mockobjects</groupId>
 			<artifactId>mockobjects-core</artifactId>
 			<version>0.09</version>
