--- a/src/main/app/mule-deploy.properties
+++ b/src/main/app/mule-deploy.properties
@@ -1,2 +1,2 @@
-#Fri Jan 24 16:53:02 GMT-03:00 2014
-config.resources=businessLogic.xml,config.xml,errorHandling.xml,endpoints.xml
+#Mon May 26 14:15:34 CEST 2014
+config.resources=businessLogic.xml,config.xml,endpoints.xml,errorHandling.xml
