updating mule to 3.5.0

--- a/pom.xml
+++ b/pom.xml
@@ -7,14 +7,14 @@
 	<artifactId>template-sfdc2sfdc-account-broadcast</artifactId>
 	<packaging>mule</packaging>
 	<version>1.0.0</version>
-	<name>SFDC2SFDC Accounts Broadcast Anypoint Template Project</name>
+	<name>sfdc2sfdc-account-broadcast Mule Anypoint Template Project</name>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-		<mule.version>3.5.0-M4</mule.version>
-		<munit.version>3.5-M1</munit.version>
+		<mule.version>3.5.0</mule.version>
+		<munit.version>3.5-M2</munit.version>
 		<junit.version>4.9</junit.version>
 
 		<sfdc.version>5.4.3</sfdc.version>
