moving predefined properties to common.properties

--- a/src/main/resources/mule.dev.properties
+++ b/src/main/resources/mule.dev.properties
@@ -1,4 +1,4 @@
-# Properties to be used on the Development environment
+# Properties to be used on the development environment
 
 polling.frequency=
 watermark.default.expression=
