--- a/pom.xml
+++ b/pom.xml
@@ -7,19 +7,19 @@
 	<artifactId>template-sfdc2sfdc-account-broadcast</artifactId>
 	<packaging>mule</packaging>
 	<version>1.0.0</version>
-	<name>SFDC2SFDC Accounts Broadcast Anypoint Template Project</name>
+	<name>sfdc2sfdc-account-broadcast Mule Anypoint Template Project</name>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-		<mule.version>3.5.0-M4</mule.version>
-		<munit.version>3.5-M1</munit.version>
+		<mule.version>3.5.0</mule.version>
+		<munit.version>3.5-M2</munit.version>
 		<junit.version>4.9</junit.version>
 
 		<sfdc.version>5.4.3</sfdc.version>
 
-		
+
 		<eclipsePluginVersion>2.8</eclipsePluginVersion>
 		<jdkName>JavaSE-1.6</jdkName>
 		<jdk.version>1.6</jdk.version>
@@ -67,6 +67,19 @@
 			</plugins>
 		</pluginManagement>
 		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.14.1</version>
+				<configuration>
+					<useFile>false</useFile>
+					<additionalClasspathElements>
+						<additionalClasspathElement>${MULE_HOME}/conf</additionalClasspathElement>
+						<!-- Location of the mule licence in Bamboo muleLicenseKey.lic -->
+						<additionalClasspathElement>/home/j2ee-bamboo/license</additionalClasspathElement>
+					</additionalClasspathElements>
+				</configuration>
+			</plugin>
 			<!-- Integration Tests -->
 			<plugin>
 				<artifactId>maven-failsafe-plugin</artifactId>
@@ -420,8 +433,20 @@
 			<version>${mule.version}</version>
 			<scope>provided</scope>
 		</dependency>
-		
+
 		<!-- for testing -->
+		<dependency>
+			<groupId>xalan</groupId>
+			<artifactId>xalan</artifactId>
+			<version>2.7.1</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>xerces</groupId>
+			<artifactId>xercesImpl</artifactId>
+			<version>2.9.1</version>
+			<scope>test</scope>
+		</dependency>
 		<dependency>
 			<groupId>mockobjects</groupId>
 			<artifactId>mockobjects-core</artifactId>
