--- a/src/main/resources/mule.dev.properties
+++ b/src/main/resources/mule.dev.properties
@@ -1,7 +1,8 @@
 # Properties to be used on the development environment
-
+trigger.policy=
 polling.frequency=
 watermark.default.expression=
+
 
 # SalesForce Connector configuration for company A
 sfdc.a.username=
