--- a/src/main/app/mule-deploy.properties
+++ b/src/main/app/mule-deploy.properties
@@ -1,2 +1,2 @@
-#Mon May 26 14:15:34 CEST 2014
-config.resources=businessLogic.xml,config.xml,endpoints.xml,errorHandling.xml
+#Thu Sep 18 12:04:56 CEST 2014
+config.resources=errorHandling.xml,endpoints.xml,config.xml,businessLogic.xml
