--- a/src/main/resources/common.properties
+++ b/src/main/resources/common.properties
@@ -1,3 +1,3 @@
 # Properties to be used across all the environments. They can be overwritten.
-http.port=9090
-polling.start.delay=0
+http.port=
+watermark.default.expression=
