--- a/src/main/resources/mule.dev.properties
+++ b/src/main/resources/mule.dev.properties
@@ -1,8 +1,7 @@
 # Properties to be used on the development environment
 trigger.policy=
 polling.frequency=
-watermark.default.expression=
-
+polling.start.delay=
 
 # SalesForce Connector configuration for company A
 sfdc.a.username=
