--- a/src/main/resources/mule.prod.properties
+++ b/src/main/resources/mule.prod.properties
@@ -1,7 +1,7 @@
 # Properties to be used on the production environment
 trigger.policy=
 polling.frequency=
-watermark.default.expression=
+polling.start.delay=
 
 # SalesForce Connector configuration for company A
 sfdc.a.username=
