--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.mule.templates</groupId>
 		<artifactId>templates-tooling-parent-pom</artifactId>
-		<version>1.2.1</version>
+		<version>1.2.3</version>
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
@@ -32,11 +32,11 @@
 							<groupId>org.mule.modules</groupId>
 							<artifactId>mule-module-sfdc</artifactId>
 						</inclusion>
-					</inclusions>
+                    </inclusions>
 				</configuration>
 			</plugin>
-        </plugins>
-	</build>
+		</plugins>
+    </build>
 
 	<dependencies>		
 		<dependency>
@@ -62,6 +62,16 @@
 			<version>${mule.version}</version>
 			<scope>provided</scope>
 		</dependency>
+    <dependency>
+            <groupId>org.mule.modules</groupId>
+            <artifactId>mule-module-extensions-support</artifactId>
+            <version>${mule.version}</version>
+        </dependency>
+    <dependency>
+            <groupId>org.mule.modules</groupId>
+            <artifactId>mule-module-extensions-spring-support</artifactId>
+            <version>${mule.version}</version>
+        </dependency>
     </dependencies>
 	<repositories>
 		<repository>
